--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
         path: "tamils-on-tour",   // replace with your live path
         formId: "tmt-payment-form",
         environment: "live",        // or test
-        origin: "https://tamilsontour.github.io,https://www.tamilsontour.com"
+        origin: "https://tamilsontour.github.io,https://tamilsontour.com"
       });
       document.getElementById('status').textContent = "Ready to pay.";
     };
   </script>
 </body>
 </html>
+
 
