--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <form id="tmt-payment-form">
     <input type="hidden" class="tmt_booking_auth" id="tmt_booking_auth">
+    <input type="hidden" class="tmt_booking_id" id="tmt_booking_id" value="0">
     <input type="hidden" class="tmt_channels" id="tmt_channels">
     <input type="hidden" class="tmt_currencies" id="tmt_currencies">
     <input type="hidden" class="tmt_total" id="tmt_total">
@@ -102,6 +103,7 @@
   </script>
 </body>
 </html>
+
 
 
 
