--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
 
       // 📦 Define package summaries
       const packages = {
-        SnowseekerSki26: {
-          name: "❄️ Snowseeker Ski Trip 2026",
+        RoyaltySki26: {
+          name: "❄️ Royalty Package Ski Trip 2026",
           desc: "Experience the French Alps with 7 nights at a 4-star resort, daily breakfast, ski passes, and airport transfers.",
           price: "£2,350",
         },
-        SnowBlissBudget: {
-          name: "🎿 SnowBliss Budget Ski Package",
+        SnowseekerSki26: {
+          name: "🎿 Snowseeker Ski Package",
           desc: "3-night getaway with equipment rental, breakfast, and lift access — perfect for a quick ski break.",
           price: "£850",
         },
@@ -247,3 +247,4 @@
   </script>
 </body>
 </html>
+
