--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
       // 📦 Define package summaries
       const packages = {
         RoyaltySki26: {
-          name: "❄️ Royalty Package Ski Trip 2026",
-          desc: "Experience the French Alps with 7 nights at a 4-star resort, daily breakfast, ski passes, and airport transfers.",
+          name: "❄️ Royalty Package",
+          desc: "Experience the French Alps with 5 nights at a luxuary 5-star hotel, including buffet breakfasts and 3course dinner, ski passes, equipment hire, airport transfers and social events.",
           price: "£2,350",
         },
         SnowseekerSki26: {
-          name: "🎿 Snowseeker Ski Package",
+          name: "🎿 Snowseeker Package",
           desc: "3-night getaway with equipment rental, breakfast, and lift access — perfect for a quick ski break.",
           price: "£850",
         },
@@ -247,4 +247,5 @@
   </script>
 </body>
 </html>
+
 
