--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <p id="packageName">Loading package...</p>
     <p id="packageDesc">Please wait...</p>
     <p class="price" id="packagePrice"></p>
-    <a href="https://tamilsontour.com" class="back-link">← Back to Tamils on Tour</a>
+    <a href="https://tamilsontour.com/ski-trip" class="back-link">← Back to Tamils on Tour</a>
   </div>
 
   <script src="https://payment.tmtprotects.com/tmt-payment-modal.3.6.1.js"></script>
@@ -247,5 +247,6 @@
   </script>
 </body>
 </html>
+
 
 
