--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@
         <option value="AU">Australia</option>
       </select>
 
+      <div style="margin-top: 1.5rem; padding: 1rem; border: 1px solid #ddd; border-radius: 8px;">
+  <input type="checkbox" id="termsCheckbox" required>
+  <label for="termsCheckbox" style="font-size: 0.95rem; color: #333;">
+    I agree to the 
+    <a href="https://tamilsontour.com/terms-and-conditions" target="_blank">Terms & Conditions</a> 
+    and the 
+    <a href="https://tamilsontour.com/privacy-policy" target="_blank">Privacy Policy</a>.
+  </label>
+</div>
+
       <input type="submit" value="Pay Now" />
     </form>
 
@@ -247,6 +257,7 @@
   </script>
 </body>
 </html>
+
 
 
 
