--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         },
         SnowseekerSki26: {
           name: "🎿 Snowseeker Package",
-          desc: "3-night getaway with equipment rental, breakfast, and lift access — perfect for a quick ski break.",
+          desc: "A flexible ski adventure including ski passes, equipment hire, transfers and social events — perfect for those arranging their own accommodation and meals.",
           price: "£850",
         },
       };
@@ -274,6 +274,7 @@
   </script>
 </body>
 </html>
+
 
 
 
