--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           path: "tamils-on-tour",
           formId: "tmt-payment-form",
           environment: "live",
-          origin: "https://tamilsontour.github.io,https://tamilsontour.com",
+          origin: "https://payments.tamilsontour.com,https://tamilsontour.com",
         });
         document.getElementById("status").textContent = "Ready to pay.";
       };
@@ -274,6 +274,7 @@
   </script>
 </body>
 </html>
+
 
 
 
