--- a/index.html
+++ b/index.html
@@ -130,14 +130,10 @@
       <input type="hidden" id="tmt_country" class="tmt_country" value="FR" />
       <input type="hidden" id="tmt_date" class="tmt_date" value="2026-03-10" />
 
-      <label for="tmt_firstname">Lead Traveller First Name</label>
-      <input id="tmt_firstname" type="text" class="tmt_firstname" required />
-
-      <label for="tmt_surname">Lead Traveller Surname</label>
-      <input id="tmt_surname" type="text" class="tmt_surname" required />
-
-      <label for="tmt_email">Lead Traveller Email</label>
-      <input id="tmt_email" type="email" class="tmt_email" required />
+      <!-- Hidden traveller details (auto-filled from Wix) -->
+      <input type="hidden" id="tmt_firstname" class="tmt_firstname" />
+      <input type="hidden" id="tmt_surname" class="tmt_surname" />
+      <input type="hidden" id="tmt_email" class="tmt_email" />
 
       <label for="tmt_payee_name">Cardholder Name</label>
       <input id="tmt_payee_name" type="text" class="tmt_payee_name" required />
@@ -290,6 +286,7 @@
   </script>
 </body>
 </html>
+
 
 
 
